# Agent-Watcher

./: .gitignore  CHANGELOG.md  README.md
bridge/: ai.openclaw.watcher-bridge.plist  config.json  package-lock.json  package.json  tsconfig.json
bridge/src/: config.ts  events.ts  index.ts  presence.ts  watcher-client.ts
docs/: DETAILED-GUIDE.md  QUICK-START.md
docs/knowledgebase/: building-and-flashing-firmware.md  creating-pokemon-sprites.md  customizing-visuals-and-behavior.md  display-freeze-root-cause.md  ehostunreach-daemon-bug.md  hardware-inventory.md  himax-agent-handoff.md  himax-agent-instructions.md  himax-agent-report.md  himax-camera-api.md  himax-camera-debugging.md  himax-progressive-test-plan.md  project-status.md  (+6 more)
firmware/: sensecap_watcher_20241106.img
patches/: sscma-library-fixes.patch
pokewatcher/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
pokewatcher/main/: CMakeLists.txt  agent_state.c  agent_state.h  app_main.c  config.h  config.local.h.example  dialog.c  dialog.h  event_queue.c  event_queue.h  himax_task.c  himax_task.h  idf_component.yml  llm_task.c  llm_task.h  mood_engine.c  mood_engine.h  renderer.c  renderer.h  roster.c  roster.h  sprite_loader.c  sprite_loader.h  voice_input.c  voice_input.h  web_server.c  web_server.h
pokewatcher/main/web/: app.js  index.html  roster.html  settings.html  style.css
sdcard_prep/: sensecap_watcher_20250102.img
watcher-mcp/: package-lock.json  package.json  tsconfig.json
zidane-dashboard/: backgrounds.html  frames.json  index.html  server.py  sprites.html  style.css
(+130 files in other folders)
