idf_component_register(
    SRCS
        "app_main.c"
        "event_queue.c"
        "himax_task.c"
        "agent_state.c"
        "renderer.c"
        "sprite_loader.c"
        "dialog.c"
        "web_server.c"
    INCLUDE_DIRS "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_http_server
        esp_http_client
        esp_lcd_touch_chsc6x
        esp_lvgl_port
        lvgl
        sscma_client
        esp_jpeg_simd
        json
        fatfs
        sdmmc
        mdns
        sensecap-watcher
        esp_io_expander_pca95xx_16bit
        esp_timer
        driver
    EMBED_FILES
        "web/index.html"
        "web/style.css"
        "web/app.js"
)
